[package]
name = "polka-dots"
version = "0.1.0"
authors = ["Yuto Nishida <starptr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pretty_env_logger = "0.4"
cmd_lib = "1.1.0"
clap = "~2.33"
dirs = "3.0"
